# image_processor

./: .gitignore  CMakeLists.txt  README.md  example.yaml
cmake/: googletest-download.cmake
src/: CMakeLists.txt  action.cpp  action.hpp  action_factory.cpp  action_factory.hpp  di_interfaces.cpp  di_interfaces.hpp  exceptions.hpp  ifilesystem.cpp  ifilesystem.hpp  image.cpp  image.hpp  image_action.cpp  image_action.hpp  image_processor.cpp  image_processor.hpp  main.cpp  parse.cpp  parse.hpp  parse_yaml.cpp  parse_yaml.hpp
test/: CMakeLists.txt  action_factory_test.cpp  action_test.cpp  di_interfaces_mock.hpp  ifilsystem_mock.hpp  image_action_test.cpp  parse_test.cpp  parse_yaml_test.cpp
test/data/: all_actions.yaml
